// Vitest Snapshot v1

exports[`animated > autocomplete 1`] = `
[
  "animated",
  "animated-delay-0",
  "animated-delay-0ms",
  "animated-delay-0s",
  "animated-delay-1ms",
  "animated-delay-1s",
  "animated-delay-2ms",
  "animated-delay-2s",
  "animated-delay-3ms",
  "animated-delay-3s",
  "animated-delay-4ms",
  "animated-delay-4s",
  "animated-delay-5ms",
  "animated-delay-5s",
  "animated-delay-6ms",
  "animated-delay-none",
  "animated-infinite",
  "animated-repeat-0",
  "animated-repeat-1",
  "animated-repeat-0.1",
  "animated-delay-1",
  "animated-repeat-2",
  "animated-repeat-1.2",
  "animated-delay-2",
  "animated-repeat-3",
  "animated-repeat-2.3",
  "animated-delay-3",
  "animated-repeat-4",
  "animated-repeat-3.4",
  "animated-delay-4",
  "animated-delay-6s",
  "animated-repeat-5",
  "animated-repeat-4.5",
  "animated-delay-5",
  "animated-repeat-6",
  "animated-repeat-5.6",
  "animated-delay-6",
  "animated-repeat-6.7",
  "animated-repeat-10",
  "animated-repeat-100",
  "animated-repeat-1000",
  "animated-repeat-infinite",
]
`;

exports[`animated > autocomplete 2`] = `
[
  "animated-repeat-0",
  "animated-repeat-1",
  "animated-repeat-0.1",
  "animated-repeat-2",
  "animated-repeat-1.2",
  "animated-repeat-3",
  "animated-repeat-2.3",
  "animated-repeat-4",
  "animated-repeat-3.4",
  "animated-repeat-5",
  "animated-repeat-4.5",
  "animated-repeat-6",
  "animated-repeat-5.6",
  "animated-repeat-6.7",
  "animated-repeat-8",
  "animated-repeat-10",
  "animated-repeat-12",
  "animated-repeat-24",
  "animated-repeat-36",
  "animated-repeat-100",
  "animated-repeat-1000",
  "animated-repeat-infinite",
]
`;

exports[`animated > autocomplete 3`] = `
[
  "animated-delay-0",
  "animated-delay-0ms",
  "animated-delay-0s",
  "animated-delay-1",
  "animated-delay-100",
  "animated-delay-150",
  "animated-delay-1000",
  "animated-delay-1ms",
  "animated-delay-1s",
  "animated-delay-2",
  "animated-delay-200",
  "animated-delay-2ms",
  "animated-delay-2s",
  "animated-delay-3",
  "animated-delay-300",
  "animated-delay-3ms",
  "animated-delay-3s",
  "animated-delay-4",
  "animated-delay-4ms",
  "animated-delay-4s",
  "animated-delay-5",
  "animated-delay-500",
  "animated-delay-5ms",
  "animated-delay-5s",
  "animated-delay-6",
  "animated-delay-6ms",
  "animated-delay-6s",
  "animated-delay-75",
  "animated-delay-700",
  "animated-delay-none",
]
`;
